# MrZero

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-launcher.yml  ci.yml  docker-publish.yml  publish-docker.yml  publish-npm.yml
_bmad-output/implementation-artifacts/: architecture-mrzero.md  prd-mrzero.md  validation-report-prd-mrzero.md
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agents/: MrZeroEnvBuilder.md  MrZeroExploitDeveloper.md  MrZeroMapperOS.md  MrZeroVulnHunterOS.md
agents/templates/: MrZeroExploitDeveloper.template.md  MrZeroMapperOS.template.md  MrZeroVulnHunterOS.template.md
docker/: Dockerfile  entrypoint.sh
launcher/: go.mod  main.go
mrzero/: __init__.py
mrzero/agents/: __init__.py  base.py
mrzero/agents/builder/: __init__.py  agent.py
mrzero/agents/exploiter/: __init__.py  agent.py
mrzero/agents/hunter/: __init__.py  agent.py
mrzero/agents/mapper/: __init__.py  agent.py
mrzero/agents/reporter/: __init__.py  agent.py
mrzero/agents/verifier/: __init__.py  agent.py
mrzero/cli/: __init__.py  main.py
mrzero/cli/commands/: __init__.py  docker_cmd.py  mcp_cmd.py  tools_cmd.py
mrzero/core/: __init__.py  artifacts.py  config.py  indexing.py  sast_runner.py  schemas.py  tools_service.py
mrzero/core/docker/: __init__.py  client.py  exceptions.py  (+1 more)
mrzero/tools/: __init__.py  additional_sast.py  base.py  binary.py  code_analysis.py  dynamic_analysis.py  linguist.py  sast.py  smart_contract.py
src/: index.ts
src/commands/: check.ts  install.ts  uninstall.ts
src/config/: agents.ts  mcp-servers.ts  tool-strings.ts  tools.ts
src/installer/: detector.ts  docker.ts  launcher.ts  mcp.ts  platforms.ts  python.ts  ruby.ts  template-renderer.ts
src/utils/: logger.ts  platform.ts  shell.ts
tests/: __init__.py  conftest.py
tests/integration/: test_checkpoint_resume.py  test_database.py  test_enhanced_loop.py  test_llm_provider.py  test_mapper_agent.py  test_sast_runner.py  test_tool_calling_integration.py  test_workflow.py
tests/unit/: test_additional_tools.py  test_checkpoint_manager.py  test_cli_config.py  test_docker_toolbox.py  test_dynamic_tools.py  test_env_builder_agent.py  test_environment_manager.py  test_exploit_builder_agent.py  test_hunter_agent.py  test_mcp.py  test_reporter_agent.py  test_schemas.py  test_tool_calling.py  test_tools.py  test_tools_cmd.py  test_tools_service.py  test_vectordb_integration.py
(+24 files in other folders)
