[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrzero"
version = "0.1.0"
description = "Autonomous AI Bug Bounty CLI - Local vulnerability research and exploitation tool"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
keywords = ["security", "vulnerability", "cli", "ai", "bug-bounty", "pentest", "sast"]
authors = [
    { name = "MrZero Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    # LLM & Orchestration
    "langgraph>=0.2.0",
    # Data Persistence
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "art>=6.5",
]

[project.optional-dependencies]
# AWS Bedrock support
aws = [
    "boto3>=1.34.0",
]

# Google Gemini support (OAuth)
google = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
]

# All LLM providers
all-providers = [
    "boto3>=1.34.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
]

# Full installation with all optional features
full = [
    "boto3>=1.34.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "boto3-stubs[bedrock-runtime]>=1.34.0",
]

[project.scripts]
mrzero = "mrzero.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["mrzero"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]
